# oss_due_diligence_agentic

./: .gitignore  pyproject.toml  readme.md  requirements.txt
src/: main.py  state.py
src/agents/: auditor.py  sentiment.py  synthesizer.py
src/tools/: github_tool.py
