[project]
name = "oss-due-diligence-agentic"
version = "0.1.0"
description = "AI Agent for Technical Due Diligence"
authors = [
    {name = "Vijay Kumar"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "langgraph (>=1.0.5,<2.0.0)",
    "langchain (>=1.2.0,<2.0.0)",
    "langchain-ollama (>=1.0.1,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "duckduckgo-search (==6.3.2)",
    "pygithub (>=2.8.1,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)"
]
